--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,13 @@ bin/
 
 ### Mac OS ###
 .DS_Store
+
+### Docs ###
+docs/
+
+### Instance Binaries ###
+*.bin
+
+### Instance Searches ###
+busca_*.csv
+relatorio_final.csv
